[package]
name = "yt-downloader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "service"

[[bin]]
name = "cli"

[lib]
name = "link_parser"
path = "src/link_parser.rs"

[dependencies]
indicatif = "0.17.7"
inquire = "0.6.2"
redis = "0.24.0"
rustube = { version = "0.6.0", features = ["blocking", "callback"] }
openssl = { version = "0.10", features = ["vendored"] }     # specifically for arm64 build
tiny_http = "0.12.0"
regex = "1.10.3"
